update typescript rules

--- a/typescript-rules.ja.mdx
+++ b/typescript-rules.ja.mdx
@@ -1,22 +1,85 @@
-```ts
-// 3. bun run biome のwarning, error を解消して、biome の warning, error は常に無い状態にして
-// 4. return を省略可能な定義は、sugar syntax で省略しろ
-// 5. nest の数を最小にしてください
-// 6. let, any を禁止
-// 7. ternary operator は可能であれば利用をして
-// 8. for よりも Array.prototype.map を利用して
-// 10. import * as を禁止
-// 11. 関数の分割, 正規化, DRY な記述を推奨
-// 12. 固定の値は定数として定義して
-// 13. デフォルト値をコードに含めるのを禁止
-// 14. 使っていない関数や変数を削除して
-// 15. main関数が存在している場合は、main関数のステップ数は最小になるように処理を分割するようにしてください。
-// 16. "as const" は禁止。 satisfies を使え。
-// 17. sort関数に渡す関数は個別で定義しろ
-// 18. magic number は可能な限り減らして
-// 21. bun run tsc は作業を行うたびに実施をしてエラーがあれば修正をしろ
-// 22. 実装の前には実装計画を事前に入念に建ててから実装をしてください
-// 26. 処理の実行計画を入念に準備してから、処理の実装を行う
-// 27. ternary operator をnestして連続で使うことを禁止
-// 28. as句で型を強制するのを禁止
-```
+---
+paths: *.ts
+---
+
+TypeScriptのコーディングルール。全ての項目を同時に常に守ってください
+
+1. bun で実行することをファイル内のコメントに明記しろ
+2. bun run tsc のエラーを解消して、bun run tsc のエラーは常に無い状態にして
+3. bun run biome のwarning, error を解消して、biome の warning, error は常に無い状態にして
+4. return を省略可能な定義は、sugar syntax で省略しろ
+5. nest の数を最小にしてください
+6. any を禁止
+7. ternary operator は可能な限り利用しろ
+8. for よりも Array.prototype.map を利用して
+9. package.json に可能な場合は集約して
+10. import * as でライブラリの読み込みを禁止
+11. 関数の分割, 正規化, DRY な記述を推奨
+12. 固定の値は定数として定義して
+13. デフォルト値をコードに含めるのを禁止
+14. 使っていない関数や変数を削除して
+15. main関数もしくは run 関数が存在している場合は、これらの関数のステップ数は最小になるように処理を分割するようにしてください。
+16. "as const" は禁止。 satisfies を使え。
+17. sort関数に渡す関数は個別で定義しろ
+18. magic number は可能な限り減らして
+19. ファイルの読み書きがある場合は、最小の回数で行ってください。複数の書き込みがある場合は並列で書き込むようにしてください
+20. 動作確認をして期待する結果になるまで修正をしつづけろ
+21. bun run tsc は作業を行うたびに実施をしてエラーがあれば修正をしろ
+22. 実装の前には実装計画を事前に入念に建ててから実装をしてください
+23. jsdom は常に使用しない。happy-dom の利用は推奨。
+24. データの取得先がUTF-8以外の場合は常に適切にiconv-lite でエンコー
+25. HTMLからデータを取得する処理の場合は必ず、実施のHTMLの情報を元に処理の定義を行う
+26. 処理の実行計画を入念に準備してから、処理の実装を行う
+27. ternary operator をnestして連続で使うことを禁止
+28. as句で型を強制するのを禁止
+29. 同じファイルのディレクトリに *.test.ts としてテストファイルを生成してください
+30. カバレッジを90%以上を担保してください
+31. HTMLの取得はfetchを推奨しています
+32. 型の定義でinterfaceを使える型はinterfaceで常に定義してください
+33. エラーログは常に英語で出力してください
+34. 対象ファイルのテストは90%以上を常に担保してください
+35. interface の型でネストしている部分があれば、interface の定義を適切な範囲で増やして
+36. union の type の定義を推奨します。
+37. type, interface, 定数の定義はファイル上部に集約して
+38. 定数は可能な限り関数のスコープ内で定義するな
+39. 可読性が良い範囲で return と const の定義は最小にして
+40. テストコードはDRYではない書き方をしてください
+41. toContain の assert は禁止です。
+42. toBe, toStrictEqual の assert の引数には変数,定数,文字列の展開を禁止。文字列や配列のassert をする場合は 常にに固定の文字列,や配列でassertをすること。
+43. enum の新規の定義を禁止
+44. expect(.includes(xxx)).toBe(true) の assert を常に全てのテストコードで禁止
+45. *.ts ファイルを編集したら bun run test を常に実行する
+46. テストファイルを常に作成して作成したファイルに対してのテストのカバレッジは 80%以上を常に担保する
+47. index.ts の barrel ファイルの作成を常に禁止
+48. テストコード以外は最大限DRYにしてください
+49. 全てのコードでネスト数を最小にしてください
+50. unused な定義は全て削除して
+51. 固定値は定数として定義しろ
+52. コメントとログは全て英語で定義しろ
+53. describe の記述量は最小にしてテストコードでもネストは常に最小にしろ。describe は多用するな。describe の利用は極限まで減らせ
+54. toEqual ではなくて toStrictEqual を利用しろ
+55. テストコードファイルでfor文のscope の中で assert をするのを禁止
+56. 3つ以上のプロパティを持つオブジェクトはinterfaceを定義しろ
+57. letを常に禁止
+58. In computer programming, a guard を使って、ネストの中の処理を簡素化できるとこは guard で定義してください。三項演算子をguard で置換するのは禁止
+59. 型の情報の無いconstの定義を禁止
+60. テストコードでは、ファイルの読み書き, Webへのリクエストは全て mock を利用してください。テストコードの実行速度を早くするようにしてください。
+61. テストコードは実行速度も重視して、テストコードの実装をしてください。
+62. テストコード以外のtsファイルを作成・編集・変更・削除をした場合は、関連するテストファイルも必ず更新を行う。
+63. コードの変更をしたら`bun run tsc`, `bun run biome`, `bun run test` が常に正常終了することを確認してください。
+64. コードを変更するたびに`bun run tsc`, `bun run biome`は実行をして。正常終了しなかった場合はすぐに修正をしてください。
+65. 対象ファイルのはカバレッジを 80% 以上にすること
+66. コードの変更をして、動作確認のコマンドがわかる場合は常に動作確認をしてください。
+67. `\n`を文字列としてファイルに書き込む時は正しくエスケープして
+68. typescript-rules.ja.mdx に基づいた実装をしているかのレビューを必ず自動で行うこと
+69. typescriptの定義を変更をしたら、関連のあるテストコードも自動で更新してカバレッジを80%以上を担保してください
+70. テストコードの変更をしたら`bun run tsc`, `bun run biome`, `bun run test` が常に正常終了することを確認してください。
+71. 未使用の定数や変数は削除か利用のどちらかを必ずすること。アンダースコア接頭辞を付けた修正を禁止。アンダースコアの利用は関数の引数の調整時のみ許可
+72. テストコードで、`from bun:test` は常に禁止
+73. interface の定義をファイル上部にまとめて。function と function の定義の間に interface を定義することを禁止
+74. constで定義した定数をファイル上部にまとめて。function と function の定義の間に 定数 を定義することを禁止
+75. テストコードで for 文の利用を禁止。テストコードでは可能な限りNOT DRY なコードを定義してください
+76. 単一の関数のスコープ内で forで2重以上のネストを可能な限り避けてください
+77. 複数の if と if else や swtich分は Map オブジェクトでの定義と利用で置き換えられる場合は置き換えてください。
+78. 関数で3つ以上の引数がある場合は、一つのオブジェクトを引数にするようにして
+79. main関数を作成や定義をする場合は、main 関数のスコープ内の定義は可能な限り減らして関数の定義の分離を行って カバレッジが上がりやすくなるようにして
